# clearance

./: .envrc.example  .gitignore  README.md  WORKSPACE-README.md  WORKSPACE-SUMMARY.md  cleanup-workspaces.sh  create-workspace.sh  directory-setup.sh  plan.md  setup-workspaces.sh  vpc-setup.sh  workspaces-setup.sh
assets/codes/federal/access-board/: ada-index.html
assets/codes/federal/ada/: design-standards.html
assets/codes/raleigh/udo/: sec-835-site-access.html
claude-plans/: find-doors-in-pdf.md
door_detector/: README.md  example.py  pyproject.toml
door_detector/door_detector/: __init__.py  __main__.py  cli.py  door_detection.py  measurement.py  pdf_utils.py  preprocessing.py  reporting.py  scale_detection.py
